<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">好天气</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_city">City</string>
    <string name="action_setting">Setting</string>
    <string name="add_city">AddCity</string>
    <string name="searchCity">搜索城市</string>
    <string name="search_hint">请输入城市名称</string>
    
    <string name="felt_temp">体感温度</string>
    <string name="humidity">湿度</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="day_after_tomorrow">后天</string>
    <string name="Sunday">周日</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    
    <string name="forecase_time">预报设置</string>
    <string name="feedback">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="about">关于我们</string>
    <string name="support">友情分享</string>
    <string name="open_forecase">开启天气预报</string>
    <string name="close_forecase">关闭天气预报</string>
    <string name="forecase_time_setting">预报时间设置</string>
    <string name="add_city_btn">点击添加城市</string>

    <string-array name="all_citys">
        <item>上海</item>
        <item>北京</item>
        <item>广州</item>
        <item>深圳</item>
        <item>武汉</item>
        <item>南京</item>
        <item>西安</item>
        <item>成都</item>
        <item>杭州</item>
        <item>郑州</item>
        <item>重庆</item>
        <item>沈阳</item>
        <item>哈尔滨</item>
        <item>长沙</item>
        <item>苏州</item>
        <item>大连</item>
        <item>天津</item>
        <item>宁波</item>
        <item>无锡</item>
        <item>厦门</item>
        <item>泰州</item>
    </string-array>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_city_search">CitySearchActivity</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    
    <string name="about_us">“好天气” 是Toway团队精心打造的一款生活类移动APP，简洁实用的界面，精准的实时天气和预报，温馨的天气提醒，化繁为简，为用户提供极致的体验。</string>

</resources>