<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3eaefa"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80ffffff">
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:orientation="vertical" >
   
    
    <RelativeLayout 
        android:id="@+id/forecase_time"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
    	android:paddingRight="10dp"
        android:layout_height="60dp"
        android:background="@drawable/setting_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            style="@style/font_white_14"
            android:text="@string/forecase_time"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/more"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80ffffff">
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
    	android:paddingRight="10dp"
        android:layout_height="60dp"
        android:background="@drawable/setting_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            style="@style/font_white_14"
            android:text="@string/feedback"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/more"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80ffffff">
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/version_update"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
    	android:paddingRight="10dp"
        android:layout_height="60dp"
        android:background="@drawable/setting_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            style="@style/font_white_14"
            android:text="@string/version_update"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/more"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80ffffff">
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
    	android:paddingRight="10dp"
        android:layout_height="60dp"
        android:background="@drawable/setting_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            style="@style/font_white_14"
            android:text="@string/about"/>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/more"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80ffffff">
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
    	android:paddingRight="10dp"
        android:layout_height="100dp">

        <Button
            android:id="@+id/support"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/support" 
            android:textSize="14sp"
            android:textColor="#3eaefa"
            android:background="@drawable/button"/>
        
    </RelativeLayout>
    
     </LinearLayout>
    

</LinearLayout>
